--- a/docs/数电.md
+++ b/docs/数电.md
@@ -1,3 +1,17 @@
 1. 信息的编码
 2. 与或非，异或
 3. 代入定理（模块化的理论依据）
+4. 逻辑代数的公式 https://zhuanlan.zhihu.com/p/80693923
+   1. 0律： ![[公式]](https://www.zhihu.com/equation?tex=0%2BA%3DA%2C+%5Cspace+0%5Ccdot+A%3D0)
+   2. 1律： ![[公式]](https://www.zhihu.com/equation?tex=1%2BA%3D1%2C+%5Cspace+1%5Ccdot+A%3DA)
+   3. 交换律： ![[公式]](https://www.zhihu.com/equation?tex=A%2BB%3DB%2BA%2C%5Cspace+A%5Ccdot+B%3DB%5Ccdot+A)
+   4. 结合律： ![[公式]](https://www.zhihu.com/equation?tex=A%2B%28B%2BC%29%3D%28A%2BB%29%2BC%2C%5Cspace+A%5Ccdot+%28BC%29%3D%28AB%29%5Ccdot+C)
+   5. 分配律： ![[公式]](https://www.zhihu.com/equation?tex=A%28B%2BC%29%3DAB%2BAC%2C%5Cspace+A%2BBC%3D%28A%2BB%29%28A%2BC%29)
+   6. 还原律： ![[公式]](https://www.zhihu.com/equation?tex=A%27%27%3DA)
+   7. 重叠律： ![[公式]](https://www.zhihu.com/equation?tex=A%2BA%3DA%2C%5Cspace+A%5Ccdot+A%3DA)
+   8. 互补律： ![[公式]](https://www.zhihu.com/equation?tex=A%2BA%27%3D1%2C%5Cspace+A%5Ccdot+A%27%3D0)
+   9. 德·摩根定律： ![[公式]](https://www.zhihu.com/equation?tex=%28AB%29%27%3DA%27%2BB%27%2C%5Cspace+%28A%2BB%29%27%3DA%27B%27)
+   10. 吸收公式： ![[公式]](https://www.zhihu.com/equation?tex=A%2BAB%3DA)
+   11. 消因子公式： ![[公式]](https://www.zhihu.com/equation?tex=A%2BA%27B%3DA%2BB)
+   12. 并项公式： ![[公式]](https://www.zhihu.com/equation?tex=AB%2BAB%27%3DA)
+   13. 消项公式： ![[公式]](https://www.zhihu.com/equation?tex=AB%2BA'C%2BBC%3DAB%2BA'C)
