--- a/docs/数电.md
+++ b/docs/数电.md
@@ -15,3 +15,6 @@
    11. 消因子公式： ![[公式]](https://www.zhihu.com/equation?tex=A%2BA%27B%3DA%2BB)
    12. 并项公式： ![[公式]](https://www.zhihu.com/equation?tex=AB%2BAB%27%3DA)
    13. 消项公式： ![[公式]](https://www.zhihu.com/equation?tex=AB%2BA'C%2BBC%3DAB%2BA'C)
+
+5. 卡诺图
+6. 
